--- a/KomKothaKoiben/KomKothaKoiben.vcxproj.filters
+++ b/KomKothaKoiben/KomKothaKoiben.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="PhoneNumber.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="UnsortedCustomerList.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Person.h">
@@ -36,6 +39,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="PhoneNumber.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="UnsortedCustomerList.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
