--- a/KomKothaKoiben/KomKothaKoiben.vcxproj.filters
+++ b/KomKothaKoiben/KomKothaKoiben.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="SortedCustomerList.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="STLUnsortedCustomerList.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Person.h">
@@ -48,6 +51,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="SortedCustomerList.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="STLUnsortedCustomerList.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
