Rearranged the assignment folder and created four projects

--- a/KomKothaKoibenSTLForwardList/KomKothaKoibenSTLForwardList.vcxproj.filters
+++ b/KomKothaKoibenSTLForwardList/KomKothaKoibenSTLForwardList.vcxproj.filters
@@ -15,19 +15,19 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Person.cpp">
+    <ClCompile Include="KomKothaKoibenSTLForwardList.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Customer.cpp">
+    <ClCompile Include="Person.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="PhoneNumber.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="UnsortedCustomerList.cpp">
+    <ClCompile Include="Customer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="KomKothaKoibenUnsortedDatabase.cpp">
+    <ClCompile Include="STLForwardList.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -35,13 +35,13 @@
     <ClInclude Include="Person.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Customer.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="PhoneNumber.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="UnsortedCustomerList.h">
+    <ClInclude Include="Customer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="STLForwardList.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
