--- a/KomKothaKoibenSTLForwardList/KomKothaKoibenSTLForwardList.vcxproj
+++ b/KomKothaKoibenSTLForwardList/KomKothaKoibenSTLForwardList.vcxproj
@@ -152,16 +152,16 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Customer.cpp" />
-    <ClCompile Include="KomKothaKoibenSTLForwardList.cpp" />
+    <ClCompile Include="Driver.cpp" />
     <ClCompile Include="Person.cpp" />
     <ClCompile Include="PhoneNumber.cpp" />
-    <ClCompile Include="STLForwardList.cpp" />
+    <ClCompile Include="KomKothaKoibenSTLForwardList.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Customer.h" />
     <ClInclude Include="Person.h" />
     <ClInclude Include="PhoneNumber.h" />
-    <ClInclude Include="STLForwardList.h" />
+    <ClInclude Include="KomKothaKoibenSTLForwardList.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
