--- a/KomKothaKoibenSortedDatabase/KomKothaKoibenSortedDatabase.vcxproj
+++ b/KomKothaKoibenSortedDatabase/KomKothaKoibenSortedDatabase.vcxproj
@@ -152,16 +152,16 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Customer.cpp" />
-    <ClCompile Include="KomKothaKoibenSortedDatabase.cpp" />
+    <ClCompile Include="Driver.cpp" />
     <ClCompile Include="Person.cpp" />
     <ClCompile Include="PhoneNumber.cpp" />
-    <ClCompile Include="SortedCustomerList.cpp" />
+    <ClCompile Include="KomKothaKoibenSortedDatabase.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Customer.h" />
     <ClInclude Include="Person.h" />
     <ClInclude Include="PhoneNumber.h" />
-    <ClInclude Include="SortedCustomerList.h" />
+    <ClInclude Include="KomKothaKoibenSortedDatabase.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
