--- a/KomKothaKoibenSortedDatabase/KomKothaKoibenSortedDatabase.vcxproj.filters
+++ b/KomKothaKoibenSortedDatabase/KomKothaKoibenSortedDatabase.vcxproj.filters
@@ -15,9 +15,6 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="KomKothaKoibenSortedDatabase.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="Person.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -27,7 +24,10 @@
     <ClCompile Include="PhoneNumber.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="SortedCustomerList.cpp">
+    <ClCompile Include="Driver.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="KomKothaKoibenSortedDatabase.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -41,7 +41,7 @@
     <ClInclude Include="PhoneNumber.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="SortedCustomerList.h">
+    <ClInclude Include="KomKothaKoibenSortedDatabase.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
